// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet renders correctly 1`] = `
<DocumentFragment>
  .cache-4qtze7-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-6zujex-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.cache-1e05ne7-StyledSpan {
  display: block;
}

.cache-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.cache-vodxmz-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #e9eaeb;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-4qtze7-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 cache-6zujex-StyledText-PreText e13y3mga0"
      >
        <span
          class="cache-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="cache-vodxmz-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":r1:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline  1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-bsg2e2-StyledSpan {
  display: block;
}

.cache-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1rxmy7w-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #e9eaeb;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":r3:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1rxmy7w-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-1o0l5sl-StyledSpan {
  display: block;
}

.cache-1o0l5sl-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-1o0l5sl-StyledSpan:before {
  color: #6d717c;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 8px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1rxmy7w-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #e9eaeb;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-1o0l5sl-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":r9:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1rxmy7w-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-12v4ovf-StyledSpan {
  display: block;
}

.cache-12v4ovf-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-12v4ovf-StyledSpan:before {
  color: #6d717c;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 8px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1rxmy7w-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #e9eaeb;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-12v4ovf-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":r6:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1rxmy7w-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with copiedText 1`] = `
<DocumentFragment>
  .cache-4qtze7-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-6zujex-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.cache-1e05ne7-StyledSpan {
  display: block;
}

.cache-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.cache-vodxmz-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #e9eaeb;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-4qtze7-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 cache-6zujex-StyledText-PreText e13y3mga0"
      >
        <span
          class="cache-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="cache-vodxmz-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":ri:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with copyText 1`] = `
<DocumentFragment>
  .cache-4qtze7-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-6zujex-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.cache-1e05ne7-StyledSpan {
  display: block;
}

.cache-1e05ne7-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.cache-vodxmz-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #e9eaeb;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-4qtze7-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 cache-6zujex-StyledText-PreText e13y3mga0"
      >
        <span
          class="cache-1e05ne7-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="cache-vodxmz-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":rg:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with hideText 1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-bsg2e2-StyledSpan {
  display: block;
}

.cache-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1rxmy7w-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #e9eaeb;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":rk:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1rxmy7w-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Show 
            <svg
              class="e1q0gj900 cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with showText 1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1ou0y3f-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 120px;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-bsg2e2-StyledSpan {
  display: block;
}

.cache-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1rxmy7w-ShowMoreContainer {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #e9eaeb;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-1ou0y3f-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":rn:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1rxmy7w-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="false"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Test 
            <svg
              class="e1q0gj900 cache-uiam8e-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  .cache-4qtze7-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-6zujex-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.cache-hry8i2-StyledSpan {
  display: block;
}

.cache-hry8i2-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.cache-hry8i2-StyledSpan:before {
  color: #6d717c;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 8px;
}

.cache-vodxmz-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #e9eaeb;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-4qtze7-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 cache-6zujex-StyledText-PreText e13y3mga0"
      >
        <span
          class="cache-hry8i2-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="cache-vodxmz-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":rc:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  .cache-4qtze7-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-6zujex-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  height: auto;
  counter-reset: section;
}

.cache-kxb5at-StyledSpan {
  display: block;
}

.cache-kxb5at-StyledSpan:after {
  content: '';
  padding-right: 64px;
}

.cache-kxb5at-StyledSpan:before {
  color: #6d717c;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 8px;
}

.cache-vodxmz-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 8px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #e9eaeb;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-4qtze7-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <pre
        class="e1q0gj908 cache-6zujex-StyledText-PreText e13y3mga0"
      >
        <span
          class="cache-kxb5at-StyledSpan e1q0gj907"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </pre>
      <div
        class="cache-vodxmz-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":re:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snippet should click on extend button to display full content on  1`] = `
<DocumentFragment>
  .cache-teex2y-Container {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #e9eaeb;
  border-radius: 4px;
}

.cache-cf30m9-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-rk9ngy-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.cache-19osgyv-StyledText-PreText {
  color: #464959;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 16px;
  padding-right: 72px;
  overflow-x: auto;
  overflow-y: hidden;
  height: auto;
  counter-reset: section;
}

.cache-bsg2e2-StyledSpan {
  display: block;
}

.cache-bsg2e2-StyledSpan:after {
  content: '';
  padding: 32px;
}

.cache-1mdowd7-ButtonContainer {
  position: absolute;
  top: 0;
  right: 0;
  padding: 16px 16px 0 0;
  background: #e9eaeb;
  border-radius: 4px;
  border: 2px solid transparent;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nr5dkj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1nr5dkj-StyledButton:hover {
  background: #f3f3f4;
}

.cache-1nr5dkj-StyledButtonactive,
.cache-1nr5dkj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1ucxira-ShowMoreContainer {
  width: 100%;
  box-shadow: none;
}

.cache-eg7v1i-StyledButton {
  width: 100%;
  background: none;
  border: none;
  padding: 16px;
  padding-top: 8px;
  cursor: pointer;
}

.cache-1ql92xg-StyledText-AlignCenterText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-12zq38q-StyledIcon-sizeStyles-AnimatedArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    class="cache-teex2y-Container e1q0gj906"
  >
    <div
      class="cache-cf30m9-Stack-StyledStack e1q0gj905"
    >
      <div
        class="cache-rk9ngy-StyledExpandable e5hc7t70"
      >
        <pre
          class="e1q0gj908 cache-19osgyv-StyledText-PreText e13y3mga0"
        >
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="cache-bsg2e2-StyledSpan e1q0gj907"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
        </pre>
      </div>
      <div
        class="cache-1mdowd7-ButtonContainer e1q0gj904"
      >
        <div
          aria-describedby=":rq:"
          class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
          tabindex="0"
        >
          <button
            aria-label="Copy"
            class="cache-1nr5dkj-StyledButton e1qa6uyd0"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cache-1ucxira-ShowMoreContainer e1q0gj903"
      >
        <button
          aria-expanded="true"
          class="cache-eg7v1i-StyledButton e1q0gj902"
          type="button"
        >
          <span
            class="e1q0gj901 cache-1ql92xg-StyledText-AlignCenterText e13y3mga0"
          >
            Hide 
            <svg
              class="e1q0gj900 cache-12zq38q-StyledIcon-sizeStyles-AnimatedArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
